# proof-of-trade

./: .gitignore  19.a30d2d2c4577ba413d2f.js  962.2046742a9566ffd8b4b1.js  LICENSE  README.md
docs/: 19.js  350.js  366.js  3rdpartylicenses.txt  404.html  856.js  990.js  common.6db39fc60ace603c1922.js  common.js  index.html  main.4a088bed63d4e759ba62.js  main.js  polyfills.f41c5ed7929330705ce4.js  runtime.5312f89db178633d2261.js  runtime.js  styles.css
program/: Cargo.toml
program/src/: error.rs  instruction.rs  processor.rs  state.rs
program/tests/: lib.rs
proof-of-trade-client/: angular.json  package-lock.json  package.json
proof-of-trade-client/src/: index.html  polyfills.ts
proof-of-trade-client/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
proof-of-trade-client/src/app/api/ethereum/: contract.ts  ethereum-contract.ts  oracle-contract.ts
proof-of-trade-client/src/app/api/interfaces/: contract.interface.ts  ethereum-contract.interface.ts  oracle-contract.interface.ts
proof-of-trade-client/src/app/api/solana/: contract.ts  solana-web3-contract.ts
proof-of-trade-client/src/app/core/consts/: shared-consts.ts
proof-of-trade-client/src/app/core/enums/: currency.enum.ts  signal-action.enum.ts  verification-trader.enum.ts  verification.enum.ts
proof-of-trade-client/src/app/core/events/: connected.event.ts
proof-of-trade-client/src/app/core/helpers/: math.helper.ts
proof-of-trade-client/src/app/core/wallet-providers/: meta-mask.provider.ts  phantom.provider.ts
zkp/: package.json
zkp/circuits/: income.circom
(+105 files in other folders)
