[package]
name = "solana-proof-of-trade"
version = "0.0.2"
description = "Proot of Trade solana program"
authors = ["Mikhail Potapov <evikser@gmail.com>"]
repository = "https://github.com/blockfield/proof-of-trade"
license = "MIT"
edition = "2018"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.9"
thiserror = "1.0"
arrayref = "0.3.6"
pyth-client = "0.2.2"

[dev-dependencies]
solana-sdk = "1.7.9"
solana-program-test = "1.7.9"

[lib]
crate-type = ["cdylib", "lib"]
